syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AuthClientApp";

package auth;

service AuthService {
  rpc BeginRegistration (RegisterRequest) returns (google.protobuf.Empty);
  rpc FinishRegistration (FinishRequest) returns (google.protobuf.Empty);
  rpc Login (LoginRequest) returns (LoginReply);
  rpc Refresh (RefreshRequest) returns (LoginReply);
  rpc Logout (LogoutRequest) returns (google.protobuf.Empty);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message FinishRequest {
  string email = 1;
  string code = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  string jwtToken = 1;
  string refreshToken = 2;
  google.protobuf.Timestamp expiresJwt = 3;
  google.protobuf.Timestamp expiresRefresh = 4;
}

message RefreshRequest {
  string jwtToken = 1;
  string refreshToken = 2;
}

message LogoutRequest {
  string email = 1;
}