syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "EmailClientApp";

package email;

service EmailService {
  rpc SendEmail (EmailRequest) returns (google.protobuf.Empty);
}

message EmailRequest {
  string from = 1;
  repeated string to = 2;
  string subject = 3;
  string body = 4;
}
